--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     , "mongoose": "*"
     , "underscore": "*"
     , "require-dir": "*"
+    , "connect-mongo": "*"
+    , "dustjs-linkedin": "*"
+    , "dustjs-helpers": "*"
+    , "consolidate": "*"
   }
 }
